--- a/Denuncia/style.css
+++ b/Denuncia/style.css
@@ -122,7 +122,7 @@ textarea::placeholder {
 
 .submit-btn:hover {
     transform: translateY(-2px);
-    box-shadow: 0 0 50px rgba(0, 0, 0, 0.2);
+    box-shadow: 0 0 20px 20px rgba(0, 0, 0, 0.2);
 }
 
 /* Estilos para a página de Números de Emergência */
@@ -208,4 +208,5 @@ textarea::placeholder {
     }
 
 }
+
 
